--- a/container/public/index.html
+++ b/container/public/index.html
@@ -7,7 +7,7 @@
     <title>Container</title>
   </head>
   <body>
-    <div id="dev-products"></div>
+    <div id="container-dev-products"></div>
     <div id="cart-dev"></div>
   </body>
 </html>
