microfrontend_demo_app: refactor cart

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="container-dev-products"></div>
-    <div id="cart-dev"></div>
+    <div id="container-dev-cart"></div>
   </body>
 </html>
